Updated TSX example