@@ -4,43 +4,24 @@ import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.locks.ReentrantLock;
 
 public class TSXTest {
-    final int N;
-    final Object o = new Object();
-    final int[] variables;
-    ReentrantLock rl = new ReentrantLock(false);
+    private final int N;
+    private final Object o = new Object();
+    private final int[] variables;
 
-    public TSXTest(int n) {
+    private TSXTest(int n) {
         this.N = n;
         variables = new int[N];
     }
 
-    /*  Microsoft Windows [Version 10.0.17134.376]
+    /*
+        macOS 10.14.6 (18G1012)
+        MacBook Pro 2019 Intel(R) Core(TM) i9-9880h CPU @ 2.30GHz
 
-	    Intel(R) Core(TM) i7-7700 CPU @ 3.60GHz
-
-        java version "1.8.0_181"
-        Java(TM) SE Runtime Environment (build 1.8.0_181-b13)
-        Java HotSpot(TM) 64-Bit Server VM (build 25.181-b13, mixed mode)
-
-        -server -XX:+UseRTMLocking
-
-        From docs: RTM improves performance for highly contended locks with low conflict in a critical
-        region (which is code that must not be accessed by more than one thread concurrently).
-
-        synchronized: true; Nmb of Variables:100000;  Duration:3568
-        synchronized: true; Nmb of Variables:10000;  Duration:4248
-        synchronized: true; Nmb of Variables:1000;  Duration:5913
-        synchronized: true; Nmb of Variables:100;  Duration:14290
-        synchronized: true; Nmb of Variables:10;  Duration:28125
-        synchronized: true; Nmb of Variables:1;  Duration:34219
-
-
-        Synchronized blocks in Java are reentrant. This means, that if a Java thread enters a synchronized block of code,
-        and thereby take the lock on the monitor object the block is synchronized on, the thread
-        can enter other Java code blocks synchronized on the same monitor object.
+        openjdk version "11.0.4" 2019-07-16 LTS
+        OpenJDK Runtime Environment Zulu11.33+15-CA (build 11.0.4+11-LTS)
+        OpenJDK 64-Bit Server VM Zulu11.33+15-CA (build 11.0.4+11-LTS, mixed mode)
 
         -server
         -XX:+UseBiasedLocking
@@ -49,68 +30,38 @@ public class TSXTest {
         -XX:BiasedLockingBulkRevokeThreshold=100
         -XX:BiasedLockingDecayTime=100
 
-        synchronized: true; Nmb of Variables:100000;  Duration:23142
-        synchronized: true; Nmb of Variables:10000;  Duration:16949
-        synchronized: true; Nmb of Variables:1000;  Duration:14102
-        synchronized: true; Nmb of Variables:100;  Duration:12279
-        synchronized: true; Nmb of Variables:10;  Duration:12021
-        synchronized: true; Nmb of Variables:1;  Duration:11680
-
-
-        macOS 10.13.6 (17G65)
-        MacBook Pro 2017 Intel(R) Core(TM) i7-7820HQ CPU @ 2.90GHz
-
-        -server
-        -XX:+UseBiasedLocking
-        -XX:BiasedLockingStartupDelay=1
-        -XX:BiasedLockingBulkRebiasThreshold=1
-        -XX:BiasedLockingBulkRevokeThreshold=100
-        -XX:BiasedLockingDecayTime=100
-
-        synchronized: true; Nmb of Variables:100000;  Duration:28831
-        synchronized: true; Nmb of Variables:10000;  Duration:15500
-        synchronized: true; Nmb of Variables:1000;  Duration:12661
-        synchronized: true; Nmb of Variables:100;  Duration:12209
-        synchronized: true; Nmb of Variables:10;  Duration:12075
-        synchronized: true; Nmb of Variables:1;  Duration:12158
-
+        synchronized: true; Nmb of Variables:100000;  Duration:27144
+        synchronized: true; Nmb of Variables:10000;  Duration:24012
+        synchronized: true; Nmb of Variables:1000;  Duration:19395
+        synchronized: true; Nmb of Variables:100;  Duration:13515
+        synchronized: true; Nmb of Variables:10;  Duration:16933
+        synchronized: true; Nmb of Variables:1;  Duration:17283
 
 
         -server -XX:+UseRTMLocking
 
-        synchronized: true; Nmb of Variables:100000;  Duration:3870
-        synchronized: true; Nmb of Variables:10000;  Duration:4579
-        synchronized: true; Nmb of Variables:1000;  Duration:8797
-        synchronized: true; Nmb of Variables:100;  Duration:17303
-        synchronized: true; Nmb of Variables:10;  Duration:44750
-        synchronized: true; Nmb of Variables:1;  Duration:34312
-
+        synchronized: true; Nmb of Variables:100000;  Duration:3799
+        synchronized: true; Nmb of Variables:10000;  Duration:3969
+        synchronized: true; Nmb of Variables:1000;  Duration:7173
+        synchronized: true; Nmb of Variables:100;  Duration:19574
+        synchronized: true; Nmb of Variables:10;  Duration:35347
+        synchronized: true; Nmb of Variables:1;  Duration:39398
 
 
         -server
 
-        ReentrantLock rl = new ReentrantLock(false);
+        synchronized: true; Nmb of Variables:100000;  Duration:25696
+        synchronized: true; Nmb of Variables:10000;  Duration:20179
+        synchronized: true; Nmb of Variables:1000;  Duration:17612
+        synchronized: true; Nmb of Variables:100;  Duration:16435
+        synchronized: true; Nmb of Variables:10;  Duration:15290
+        synchronized: true; Nmb of Variables:1;  Duration:17787
 
-        synchronized: true; Nmb of Variables:100000;  Duration:22417
-        synchronized: true; Nmb of Variables:10000;  Duration:23962
-        synchronized: true; Nmb of Variables:1000;  Duration:13579
-        synchronized: true; Nmb of Variables:100;  Duration:12815
-        synchronized: true; Nmb of Variables:10;  Duration:12793
-        synchronized: true; Nmb of Variables:1;  Duration:11131
 
 
      */
     public static void main(String[] args) throws InterruptedException {
         int n = 100000;
-        while (true) {
-            new TSXTest(n).go(false);
-            if (n == 1) {
-                break;
-            }
-            n = n / 10;
-        }
-
-        n = 100000;
         while (true) {
             new TSXTest(n).go(true);
             if (n == 1) {
@@ -122,7 +73,7 @@ public class TSXTest {
 
     private void go(boolean doSync) throws InterruptedException {
         ExecutorService es = Executors.newFixedThreadPool(4);
-        Collection cs = new ArrayList<>();
+        List<Task> cs = new ArrayList<>();
         cs.add(new Task(100, doSync));
         cs.add(new Task(200, doSync));
         cs.add(new Task(300, doSync));
@@ -138,13 +89,11 @@ public class TSXTest {
     public class Task implements Callable<Void> {
 
         final Random r;
-        private int seed;
         private boolean sync;
         private int[] rnd = new int[N];
 
         public Task(int seed, boolean sync) {
             r = new Random(seed);
-            this.seed = seed;
             this.sync = sync;
             List<Integer> rndList = new ArrayList<>();
             for (int i = 0; i < N; i++) {
@@ -153,25 +102,19 @@ public class TSXTest {
 
             Collections.shuffle(rndList, r);
             for (int i = 0; i < N; i++) {
-                rnd[i] = rndList.get(i).intValue();
+                rnd[i] = rndList.get(i);
             }
         }
 
         @Override
         public Void call() {
             for (int i = 0; i < 100000000; i++) {
-//                if (sync) {
-//                    rl.lock();
-//                    try{
-//                        variables[rnd[i % N]]++;
-//                    } finally { rl.unlock(); }
-//                }
-//                else variables[rnd[i % N]]++;
                 if (sync)
                     synchronized (o) {
                         variables[rnd[i % N]]++;
                     }
-                else variables[rnd[i % N]]++;
+                else
+                    variables[rnd[i % N]]++;
             }
             return null;
         }
